syntax = "proto3";

package user;

option go_package = "github.com/vwency/resilient-scatter-gather/proto/user";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}
